syntax = "proto3";
package flares.flares.v1beta1;

option go_package = "github.com/wangfeiping/flares/x/flares/types";

import "gogoproto/gogo.proto";

message MsgContract {
  string id = 1;
  bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string key = 3; 
  string receiver = 4; 
  string accept = 5; 
  string durationHeight = 6; 
  string bottom = 7; 
}

