syntax = "proto3";
package flares.sealedmonsters.v1beta1;

option go_package = "github.com/wangfeiping/flares/x/sealedmonsters/types";

import "gogoproto/gogo.proto";

message MsgMonster {
  string id = 1;
  bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string description = 3; 
  string solutionHash = 4; 
  string reward = 5; 
  string solution = 6; 
  int32 durationHeight = 7; 
  fixed64 height = 8; 
  string contractKey = 9; 
}

